subprojects/FreeType2/sandbox/package/freetype.pp


function FT_LOAD_TARGET_(x: longint): longint;
function FT_LOAD_TARGET_NORMAL: longint; { return type might be wrong }
function FT_LOAD_TARGET_LIGHT: longint; { return type might be wrong }
function FT_LOAD_TARGET_MONO: longint; { return type might be wrong }
function FT_LOAD_TARGET_LCD: longint; { return type might be wrong }
function FT_LOAD_TARGET_LCD_V: longint; { return type might be wrong }
function FT_LOAD_TARGET_MODE(x: longint): longint;
procedure FT_Set_Transform(face: TFT_Face; matrix: PFT_Matrix; delta: PFT_Vector); cdecl; external libfreetype;
procedure FT_Get_Transform(face: TFT_Face; matrix: PFT_Matrix; delta: PFT_Vector); cdecl; external libfreetype;

type
  PFT_Render_Mode_ = ^TFT_Render_Mode_;
  TFT_Render_Mode_ = longint;

const
  FT_RENDER_MODE_NORMAL = 0;
  FT_RENDER_MODE_LIGHT = 1;
  FT_RENDER_MODE_MONO = 2;
  FT_RENDER_MODE_LCD = 3;
  FT_RENDER_MODE_LCD_V = 4;
  FT_RENDER_MODE_SDF = 5;
  FT_RENDER_MODE_MAX = 6;

type
  TFT_Render_Mode = TFT_Render_Mode_;
  PFT_Render_Mode = ^TFT_Render_Mode;

function FT_Render_Glyph(slot: TFT_GlyphSlot; render_mode: TFT_Render_Mode): TFT_Error; cdecl; external libfreetype;

type
  PFT_Kerning_Mode_ = ^TFT_Kerning_Mode_;
  TFT_Kerning_Mode_ = longint;

const
  FT_KERNING_DEFAULT = 0;
  FT_KERNING_UNFITTED = 1;
  FT_KERNING_UNSCALED = 2;

type
  TFT_Kerning_Mode = TFT_Kerning_Mode_;
  PFT_Kerning_Mode = ^TFT_Kerning_Mode;

function FT_Get_Kerning(face: TFT_Face; left_glyph: TFT_UInt; right_glyph: TFT_UInt; kern_mode: TFT_UInt; akerning: PFT_Vector): TFT_Error; cdecl; external libfreetype;
function FT_Get_Track_Kerning(face: TFT_Face; point_size: TFT_Fixed; degree: TFT_Int; akerning: PFT_Fixed): TFT_Error; cdecl; external libfreetype;
function FT_Select_Charmap(face: TFT_Face; encoding: TFT_Encoding): TFT_Error; cdecl; external libfreetype;
function FT_Set_Charmap(face: TFT_Face; charmap: TFT_CharMap): TFT_Error; cdecl; external libfreetype;
function FT_Get_Charmap_Index(charmap: TFT_CharMap): TFT_Int; cdecl; external libfreetype;
function FT_Get_Char_Index(face: TFT_Face; charcode: TFT_ULong): TFT_UInt; cdecl; external libfreetype;
function FT_Get_First_Char(face: TFT_Face; agindex: PFT_UInt): TFT_ULong; cdecl; external libfreetype;
function FT_Get_Next_Char(face: TFT_Face; char_code: TFT_ULong; agindex: PFT_UInt): TFT_ULong; cdecl; external libfreetype;
function FT_Face_Properties(face: TFT_Face; num_properties: TFT_UInt; properties: PFT_Parameter): TFT_Error; cdecl; external libfreetype;
function FT_Get_Name_Index(face: TFT_Face; glyph_name: PFT_String): TFT_UInt; cdecl; external libfreetype;
function FT_Get_Glyph_Name(face: TFT_Face; glyph_index: TFT_UInt; buffer: TFT_Pointer; buffer_max: TFT_UInt): TFT_Error; cdecl; external libfreetype;
function FT_Get_Postscript_Name(face: TFT_Face): PChar; cdecl; external libfreetype;

const
  FT_SUBGLYPH_FLAG_ARGS_ARE_WORDS = 1;
  FT_SUBGLYPH_FLAG_ARGS_ARE_XY_VALUES = 2;
  FT_SUBGLYPH_FLAG_ROUND_XY_TO_GRID = 4;
  FT_SUBGLYPH_FLAG_SCALE = 8;
  FT_SUBGLYPH_FLAG_XY_SCALE = $40;
  FT_SUBGLYPH_FLAG_2X2 = $80;
  FT_SUBGLYPH_FLAG_USE_MY_METRICS = $200;

function FT_Get_SubGlyph_Info(glyph: TFT_GlyphSlot; sub_index: TFT_UInt; p_index: PFT_Int; p_flags: PFT_UInt; p_arg1: PFT_Int;
  p_arg2: PFT_Int; p_transform: PFT_Matrix): TFT_Error; cdecl; external libfreetype;

const
  FT_FSTYPE_INSTALLABLE_EMBEDDING = $0000;
  FT_FSTYPE_RESTRICTED_LICENSE_EMBEDDING = $0002;
  FT_FSTYPE_PREVIEW_AND_PRINT_EMBEDDING = $0004;
  FT_FSTYPE_EDITABLE_EMBEDDING = $0008;
  FT_FSTYPE_NO_SUBSETTING = $0100;
  FT_FSTYPE_BITMAP_EMBEDDING_ONLY = $0200;

function FT_Get_FSType_Flags(face: TFT_Face): TFT_UShort; cdecl; external libfreetype;
function FT_Face_GetCharVariantIndex(face: TFT_Face; charcode: TFT_ULong; variantSelector: TFT_ULong): TFT_UInt; cdecl; external libfreetype;
function FT_Face_GetCharVariantIsDefault(face: TFT_Face; charcode: TFT_ULong; variantSelector: TFT_ULong): TFT_Int; cdecl; external libfreetype;
function FT_Face_GetVariantSelectors(face: TFT_Face): PFT_UInt32; cdecl; external libfreetype;
function FT_Face_GetVariantsOfChar(face: TFT_Face; charcode: TFT_ULong): PFT_UInt32; cdecl; external libfreetype;
function FT_Face_GetCharsOfVariant(face: TFT_Face; variantSelector: TFT_ULong): PFT_UInt32; cdecl; external libfreetype;
function FT_MulDiv(a: TFT_Long; b: TFT_Long; c: TFT_Long): TFT_Long; cdecl; external libfreetype;
function FT_MulFix(a: TFT_Long; b: TFT_Long): TFT_Long; cdecl; external libfreetype;
function FT_DivFix(a: TFT_Long; b: TFT_Long): TFT_Long; cdecl; external libfreetype;
function FT_RoundFix(a: TFT_Fixed): TFT_Fixed; cdecl; external libfreetype;
function FT_CeilFix(a: TFT_Fixed): TFT_Fixed; cdecl; external libfreetype;
function FT_FloorFix(a: TFT_Fixed): TFT_Fixed; cdecl; external libfreetype;
procedure FT_Vector_Transform(vector: PFT_Vector; matrix: PFT_Matrix); cdecl; external libfreetype;

const
  FREETYPE_MAJOR = 2;
  FREETYPE_MINOR = 13;
  FREETYPE_PATCH = 2;

procedure FT_Library_Version(_library: TFT_Library; amajor: PFT_Int; aminor: PFT_Int; apatch: PFT_Int); cdecl; external libfreetype;
function FT_Face_CheckTrueTypePatents(face: TFT_Face): TFT_Bool; cdecl; external libfreetype;
function FT_Face_SetUnpatentedHinting(face: TFT_Face; Value: TFT_Bool): TFT_Bool; cdecl; external libfreetype;

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_HORIZONTAL(face: longint): longint;
begin
  //  FT_HAS_HORIZONTAL:= not ( not ((face^.face_flags) and FT_FACE_FLAG_HORIZONTAL));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_VERTICAL(face: longint): longint;
begin
  //  FT_HAS_VERTICAL:= not ( not ((face^.face_flags) and FT_FACE_FLAG_VERTICAL));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_KERNING(face: longint): longint;
begin
  //  FT_HAS_KERNING:= not ( not ((face^.face_flags) and FT_FACE_FLAG_KERNING));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_IS_SCALABLE(face: longint): longint;
begin
  //  FT_IS_SCALABLE:= not ( not ((face^.face_flags) and FT_FACE_FLAG_SCALABLE));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_IS_SFNT(face: longint): longint;
begin
  //  FT_IS_SFNT:= not ( not ((face^.face_flags) and FT_FACE_FLAG_SFNT));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_IS_FIXED_WIDTH(face: longint): longint;
begin
  //  FT_IS_FIXED_WIDTH:= not ( not ((face^.face_flags) and FT_FACE_FLAG_FIXED_WIDTH));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_FIXED_SIZES(face: longint): longint;
begin
  //  FT_HAS_FIXED_SIZES:= not ( not ((face^.face_flags) and FT_FACE_FLAG_FIXED_SIZES));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_FAST_GLYPHS(face: longint): longint;
begin
  FT_HAS_FAST_GLYPHS := 0;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_GLYPH_NAMES(face: longint): longint;
begin
  //  FT_HAS_GLYPH_NAMES:= not ( not ((face^.face_flags) and FT_FACE_FLAG_GLYPH_NAMES));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_MULTIPLE_MASTERS(face: longint): longint;
begin
  //  FT_HAS_MULTIPLE_MASTERS:= not ( not ((face^.face_flags) and FT_FACE_FLAG_MULTIPLE_MASTERS));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_IS_NAMED_INSTANCE(face: longint): longint;
begin
  //  FT_IS_NAMED_INSTANCE:= not ( not ((face^.face_index) and $7FFF0000));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_IS_VARIATION(face: longint): longint;
begin
  //  FT_IS_VARIATION:= not ( not ((face^.face_flags) and FT_FACE_FLAG_VARIATION));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_IS_CID_KEYED(face: longint): longint;
begin
  //  FT_IS_CID_KEYED:= not ( not ((face^.face_flags) and FT_FACE_FLAG_CID_KEYED));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_IS_TRICKY(face: longint): longint;
begin
  //  FT_IS_TRICKY:= not ( not ((face^.face_flags) and FT_FACE_FLAG_TRICKY));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_COLOR(face: longint): longint;
begin
  //  FT_HAS_COLOR:= not ( not ((face^.face_flags) and FT_FACE_FLAG_COLOR));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_SVG(face: longint): longint;
begin
  //  FT_HAS_SVG:= not ( not ((face^.face_flags) and FT_FACE_FLAG_SVG));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_SBIX(face: longint): longint;
begin
  //  FT_HAS_SBIX:= not ( not ((face^.face_flags) and FT_FACE_FLAG_SBIX));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_HAS_SBIX_OVERLAY(face: longint): longint;
begin
  //  FT_HAS_SBIX_OVERLAY:= not ( not ((face^.face_flags) and FT_FACE_FLAG_SBIX_OVERLAY));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_LOAD_TARGET_(x: longint): longint;
begin
  //  FT_LOAD_TARGET_:=(FT_STATIC_CAST(FT_Int32,Tx(@(15)))) shl 16;
end;

{ was #define dname def_expr }
function FT_LOAD_TARGET_NORMAL: longint; { return type might be wrong }
begin
  FT_LOAD_TARGET_NORMAL := FT_LOAD_TARGET_(FT_RENDER_MODE_NORMAL);
end;

{ was #define dname def_expr }
function FT_LOAD_TARGET_LIGHT: longint; { return type might be wrong }
begin
  FT_LOAD_TARGET_LIGHT := FT_LOAD_TARGET_(FT_RENDER_MODE_LIGHT);
end;

{ was #define dname def_expr }
function FT_LOAD_TARGET_MONO: longint; { return type might be wrong }
begin
  FT_LOAD_TARGET_MONO := FT_LOAD_TARGET_(FT_RENDER_MODE_MONO);
end;

{ was #define dname def_expr }
function FT_LOAD_TARGET_LCD: longint; { return type might be wrong }
begin
  FT_LOAD_TARGET_LCD := FT_LOAD_TARGET_(FT_RENDER_MODE_LCD);
end;

{ was #define dname def_expr }
function FT_LOAD_TARGET_LCD_V: longint; { return type might be wrong }
begin
  FT_LOAD_TARGET_LCD_V := FT_LOAD_TARGET_(FT_RENDER_MODE_LCD_V);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FT_LOAD_TARGET_MODE(x: longint): longint;
begin
  //  FT_LOAD_TARGET_MODE:=FT_STATIC_CAST(FT_Render_Mode,(x shr 16) and 15);
end;


end.
